* Updated to use jdk-17 / spring-boot 3.x * Updated README.md